--- a/pom.xml
+++ b/pom.xml
@@ -42,9 +42,9 @@
             <version>0.10.2</version>
         </dependency>
         <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <version>8.0.25</version>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.3.1</version>
             <scope>runtime</scope>
         </dependency>
 
